# rust-rsa-encryption

./: Cargo.toml  README.md  build.rs
src/: display.rs  encryption.rs  generate_keys.rs  main.rs
src/core/: decryption.rs  encryption.rs  generate_keys.rs  mod.rs
src/utils/: mod.rs
ui/: decryptionwindow.slint  encryptionwindow.slint  keygenwindow.slint  startwindow.slint
