[package]
name = "rsa_encryption"
version = "0.1.0"
authors = ["Ricky Ultimate <rickyogigi@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clearscreen = "2.0.1"
gcd = "2.3.0"
slint = "1.5.1"

[build-dependencies]
slint-build = "1.5.1"
